# learning-opengl

./: Cargo.toml
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: coloring_with_uniforms.frag  create_and_clear_window.rs  main.rs  program.rs  render_gl.rs  resources.rs  two_vaos_and_two_vbos.rs  two_vaos_and_two_vbos.vert  vertex_shader_coloring.frag  vertex_shader_coloring.vert  yellow_triangle.frag
